--- a/data/stories.yml
+++ b/data/stories.yml
@@ -175,7 +175,7 @@ stories:
       - requested_slot: null
     - active_loop: null
     - action: action_save_intent_paga_o_no
-    - action: utter_no_paga
+    - action: utter_no_transfiere
     - action: action_save_data
     - action: action_restart2
 
@@ -216,6 +216,42 @@ stories:
       - requested_slot: null
     - active_loop: null
     - action: action_save_intent_paga_o_no
-    - action: utter_no_paga
+    - action: utter_no_transfiere
+    - action: action_save_data
+    - action: action_restart2
+
+  - story: utter_ask_question__2
+    steps:
+    - action: utter_ask_question2
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: paga_form
+    - active_loop: paga_form
+    - slot_was_set:
+      - paga_o_no: no
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_save_intent_paga_o_no
+    - action: utter_no_transfiere
+    - action: action_save_data
+    - action: action_restart2
+
+  - story: utter_ask_question__2_afirmtaivo
+    steps:
+    - action: utter_ask_question2
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: paga_form
+    - active_loop: paga_form
+    - slot_was_set:
+      - paga_o_no: si
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_save_intent_paga_o_no
+    - action: utter_tranfiere
     - action: action_save_data
     - action: action_restart2
