--- a/domain.yml
+++ b/domain.yml
@@ -60,10 +60,10 @@ responses:
   - text: '{name}, ​¿Desea que lo atienda un ejecutivo para que pueda explicarle todas sus opciones y beneficios? responda con un si o un no​'
   utter_si_paga:
   - text: Muchas gracias por su tiempo {name}. Su pago ha quedado agendado para el {fecha_pago}, que tenga un buen dia. | EXIT
-  utter_default:
-  - text: Lo siento, no entendí lo que dijiste. ¿Podrías intentarlo de nuevo?
+  action_default_fallback:
+  - text: Lo siento, no entendí lo que dijiste. responda con un si o un no
   utter_default_repetir:
-  - text: Lo siento, no entendí lo que dijiste. ¿Podrías intentarlo de nuevo?
+  - text: Lo siento, no entendí lo que dijiste. responda con un si o un no
   utter_disculpe_molestia:
   - text: Disculpe la molestia, que tenga un buen día, Adiós.| EXIT
   utter_despedida:
@@ -76,7 +76,7 @@ responses:
   - text: estamos llamando de A L C por su crédito Tanner Servicios Financieros.
   utter_donde2:
   - text: estamos llamando de A L C por su crédito Tanner Servicios Financieros ​¿Desea que lo atienda un ejecutivo para que pueda explicarle todas sus opciones y beneficios? responda con un si o un no.
-  utter_no_paga:
+  utter_no_transfiere:
   - text: Muchas gracias , si cambia de opinión nos puede contactar al número 56 9 590 11 250  o nuestro whastapp + 56 9 590 11 250 | EXIT'
   utter_tranfiere:
   - text: ok, será transferido con uno de nuestros ejecutivos | DER
@@ -110,7 +110,7 @@ actions:
 - utter_greet_apolo
 - utter_monto
 - utter_no_conoce
-- utter_no_paga
+- utter_no_transfiere
 - utter_out_of_scope
 - utter_preguntar_conoce
 - utter_si_conoce
